Fixed header brand to be aligned

--- a/sass/modules/_header.sass
+++ b/sass/modules/_header.sass
@@ -40,15 +40,15 @@ header.topbar
     margin-left: 0 !important
 
 .navbar-header
-  margin-left: 16.666% !important
+  margin-left: 16% !important
 
 +respond-to(993px, max-width)
   .navbar-header
-    margin-left: 0 !important
+    margin-left: -15px !important
   .navbar-nav
     a
       padding: 24px 18px !important
 
 +respond-to(768px, max-width)
   .navbar-header
-    margin-left: 0 !important
+    margin-left: -15px !important
